--- a/apple.html
+++ b/apple.html
@@ -8,23 +8,134 @@
   </head>
   <body>
     <div id="layout">
-      <div class="header">
-        <div></div>
-        <div>Store</div>
-        <div>Mac</div>
-        <div>Ipad</div>
-        <div>iPad</div>
-        <div>iPhone</div>
-        <div>Watch</div>
-        <div>Vision</div>
-        <div>Airpods</div>
-        <div>TV & Home</div>
-        <div>Entertainment</div>
-        <div>Accessories</div>
-        <div>Support</div>
-        <div></div>
-        <div></div>
-        <1></1>
+      <header class="header">
+        <a href="./apple.html" class="jijiglogo">
+          <img src="./Item → Link - Apple.png" alt="" />
+        </a>
+        <nav class="navigation">
+          <a class="store" href="./storeapple.html">Store</a>
+          <div class="headerbichig">Mac</div>
+          <div class="headerbichig">Ipad</div>
+          <div class="headerbichig">iPad</div>
+          <div class="headerbichig">iPhone</div>
+          <div class="headerbichig">Watch</div>
+          <div class="headerbichig">Vision</div>
+          <div class="headerbichig">Airpods</div>
+          <div class="headerbichig">TV & Home</div>
+          <div class="headerbichig">Entertainment</div>
+          <div class="headerbichig">Accessories</div>
+          <div class="headerbichig">Support</div>
+          <div class="jijiglogo">
+            <img src="./Item → Button - Search apple.com.png" alt="" />
+          </div>
+          <div class="jijiglogo"><img src="./tsunhnii logo.png" alt="" /></div>
+        </nav>
+      </header>
+      <div class="page1">
+        <div class="donate">
+          We're donating $5 to the Global Fund for every purchase made with
+          Apple Pay at Apple. Through 12/8
+        </div>
+        <div class="arvanzurgaapro">
+          <div class="bichig">
+            <div class="ip16">Iphone 16 Pro</div>
+            <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
+            <div>
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="arvanzurgaa">
+          <div class="bichig">
+            <div class="ip16">Iphone 16</div>
+            <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
+            <div>
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="gift">
+          <div class="giftmagic">Gift magic</div>
+          <div class="jijig-giftbichig">Make their holiday wish come true</div>
+          <button class="shopgifts">Shop gifts</button>
+        </div>
+        <div class="page2">
+          <div class="ipadair">
+            <div class="pizda">
+              <div class="ipadzurag"><img src="./ipad.png" alt="" /></div>
+              <div class="ipadairbichig">
+                Two sizes. Faster chip. Does it all.
+              </div>
+              <div>
+                <button class="learnmore">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
+            </div>
+            <div class="ungutbichig">
+              <span style="color: rgb(red, green, blue)">
+                Hello, Apple Intelligence</span
+              >
+            </div>
+          </div>
+          <div class="airpod">
+            <div class="airpodtext">Airpods Pro 2</div>
+            <div class="airpodbichig">Now with a Hearing Aid feature.2</div>
+            <div class="sda">
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+          <div class="iwatch">
+            <div class="iwatchzurag"><img src="./iwatch.png" alt="" /></div>
+            <div class="iwatchbichig">Thinstant classic.</div>
+            <div class="sda">
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+          <div class="macbook">
+            <div class="macbooktext">MacBook Air</div>
+            <div class="macbookbichig">Lean. Mean. M3 machine</div>
+            <div class="sda">
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+          <div class="tradein">
+            <div class="tradeinzurag"><img src="./tradein.png" alt="" /></div>
+            <div class="tradeinbichig">
+              Get $180-$650 in credit when you trade in iPhone 12 or higher.3
+            </div>
+            <div class="sda">
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+          <div class="card">
+            <div class="cardzurag"><img src="./card.png" alt="" /></div>
+            <div class="cardbichig">
+              Get up to 3% Daily Cash back with every purchase.
+            </div>
+            <div class="sda">
+              <button class="learnmore">Learn more</button>
+              <button class="buy">Buy</button>
+            </div>
+          </div>
+        </div>
+        <div class="scroll">
+          <div class="ursdagzuragnuud img1"></div>
+          <div class="ursdagzuragnuud img2"></div>
+          <div class="ursdagzuragnuud img3"></div>
+          <div class="ursdagzuragnuud img4"></div>
+          <div class="ursdagzuragnuud img5"></div>
+          <div class="ursdagzuragnuud img6"></div>
+          <div class="ursdagzuragnuud img7"></div>
+          <div class="ursdagzuragnuud img8"></div>
+          <div class="ursdagzuragnuud img9"></div>
+          <div class="ursdagzuragnuud img10"></div>
+        </div>
       </div>
     </div>
   </body>
