--- a/apple.html
+++ b/apple.html
@@ -125,16 +125,90 @@
           </div>
         </div>
         <div class="scroll">
-          <div class="ursdagzuragnuud img1"></div>
-          <div class="ursdagzuragnuud img2"></div>
-          <div class="ursdagzuragnuud img3"></div>
-          <div class="ursdagzuragnuud img4"></div>
-          <div class="ursdagzuragnuud img5"></div>
-          <div class="ursdagzuragnuud img6"></div>
-          <div class="ursdagzuragnuud img7"></div>
-          <div class="ursdagzuragnuud img8"></div>
-          <div class="ursdagzuragnuud img9"></div>
-          <div class="ursdagzuragnuud img10"></div>
+          <div class="ursdagzuragnuud img1" id="zurag-1">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Thriller</span> · Will they
+                make history…or fake it?
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img2" id="zurag-2">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Comedy</span> · Natalie
+                Portman and Moses Ingram star in a visionary noir thriller.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img3" id="zurag-3"></div>
+          <div class="ursdagzuragnuud img4" id="zurag-4"></div>
+          <div class="ursdagzuragnuud img5" id="zurag-5">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Drama</span> · Experience
+                Ridley Scott's extended epic.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img6" id="zurag-6">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Comedy</span> · The shady side
+                of paradise.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img7" id="zurag-7">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Action</span> · Worst. Heist.
+                Ever.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img8" id="zurag-8">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Documentary</span> · All that
+                glitters isn't gold.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img9" id="zurag-9">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                Watch Messi, every club, and every match--live.
+              </div>
+            </div>
+          </div>
+          <div class="ursdagzuragnuud img10" id="zurag-10">
+            <div class="stream">
+              <button class="streambutton">Stream now</button>
+              <div class="genre">
+                <span style="color: antiquewhite">Drama</span> · New season
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="dots">
+          <a href="#zurag-1" class="dot"></a>
+          <a href="#zurag-2" class="dot"></a>
+          <a href="#zurag-3" class="dot"></a>
+          <a href="#zurag-4" class="dot"></a>
+          <a href="#zurag-5" class="dot"></a>
+          <a href="#zurag-6" class="dot"></a>
+          <a href="#zurag-7" class="dot"></a>
+          <a href="#zurag-8" class="dot"></a>
+          <a href="#zurag-9" class="dot"></a>
+          <a href="#zurag-10" class="dot"></a>
         </div>
       </div>
     </div>
