--- a/storeapple.html
+++ b/storeapple.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./storeapple.css" />
   </head>
   <body>
-    <div class="layout">
+    <div id="layout">
       <header class="header">
         <a href="./apple.html" class="jijiglogo">
           <img src="./Item → Link - Apple.png" alt="" />
@@ -31,6 +31,98 @@
           <div class="jijiglogo"><img src="./tsunhnii logo.png" alt="" /></div>
         </nav>
       </header>
+      <div class="page1">
+        <div class="donate">
+          Pay monthly at 0% APR when you choose to check out with Apple Card
+          Monthly Installments.
+        </div>
+        <div class="solongonheseg"></div>
+        <div class="thirdheseg">
+          <div class="niilsenbichig">
+            <span class="storesolongo">Store. </span>
+            <div class="solongontext">Gift magic this holiday.</div>
+          </div>
+
+          <div class="needhelp?">
+            <div class="ehniineed">
+              <img src="./huuhni zurag.jpg" alt="" />
+              <div class="huuhniizuragtaibichig">
+                <div class="need">
+                  <p><strong>Need shopping help?</strong></p>
+                  <a href="">Ask a Specialist</a>
+                </div>
+                <div class="visit">
+                  <p><strong>Visit an apple store</strong></p>
+                  <a href="">Find one near you ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="maciphoneipad">
+          <div class="pictures">
+            <img src="./mac1.png" alt="" />
+            <div class="text">Mac</div>
+          </div>
+          <div class="pictures">
+            <img src="./iphone.png" alt="" />
+            <div class="text">iPhone</div>
+          </div>
+          <div class="pictures">
+            <img src="./iwatch.png" alt="" />
+            <div class="text">Apple Watch</div>
+          </div>
+          <div class="pictures">
+            <img src="./vision pro.png" alt="" />
+            <div class="text">Apple Vision pro</div>
+          </div>
+          <div class="pictures">
+            <img src="./airpods.png" alt="" />
+            <div class="text">Airpods</div>
+          </div>
+          <div class="pictures">
+            <img src="./ipad.png" alt="" />
+            <div class="text">iPad</div>
+          </div>
+          <div class="pictures">
+            <img src="./airtag.png" alt="" />
+            <div class="text">AirTag</div>
+          </div>
+          <div class="pictures">
+            <img src="./apple tv.png" alt="" />
+            <div class="text">Apple TV 4K</div>
+          </div>
+          <div class="pictures">
+            <img src="./homepod.png" alt="" />
+            <div class="text">Homepod</div>
+          </div>
+          <div class="pictures">
+            <img src="./case.png" alt="" />
+            <div class="text">Accessories</div>
+          </div>
+          <div class="pictures">
+            <img src="./gift card.png" alt="" />
+            <div class="text">Apple Gift card</div>
+          </div>
+        </div>
+        <div class="scrollfirst">
+          <div class="rainbowtextlatest">
+            <span class="solongonlatest">The latest.</span>
+            <p class="greytext">Let them unwrap wonders</p>
+          </div>
+          <div class="ip16pro">
+            <div class="doodbichig">
+              <div id="appleintelligence">
+                APPLE INTELLIGENCE <span class="gurvaljin">∆</span>
+              </div>
+              <div class="uneteibichig">
+                <p id="ip16probichig"><strong>iPhone 16 Pro</strong></p>
+                <p id="ip16une">From $999 or $41.62/mo. for 24mo.*</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
