--- a/apple.html
+++ b/apple.html
@@ -64,7 +64,9 @@
         <div class="page2">
           <div class="ipadair">
             <div class="pizda">
-              <div class="ipadzurag"><img src="./ipad.png" alt="" /></div>
+              <div class="ipadzurag">
+                <img src="./ipadairehnii.png" alt="" />
+              </div>
               <div class="ipadairbichig">
                 Two sizes. Faster chip. Does it all.
               </div>
@@ -88,7 +90,9 @@
             </div>
           </div>
           <div class="iwatch">
-            <div class="iwatchzurag"><img src="./iwatch.png" alt="" /></div>
+            <div class="iwatchzurag">
+              <img src="./iwatchehlel.png" alt="" />
+            </div>
             <div class="iwatchbichig">Thinstant classic.</div>
             <div class="sda">
               <button class="learnmore">Learn more</button>
