--- a/storeapple.html
+++ b/storeapple.html
@@ -105,11 +105,11 @@
             <div class="text">Apple Gift card</div>
           </div>
         </div>
+        <div class="rainbowtextlatest">
+          <span class="solongonlatest">The latest.</span>
+          <p class="greytext">Let them unwrap wonders</p>
+        </div>
         <div class="scrollfirst">
-          <div class="rainbowtextlatest">
-            <span class="solongonlatest">The latest.</span>
-            <p class="greytext">Let them unwrap wonders</p>
-          </div>
           <div class="ip16pro">
             <div class="doodbichig">
               <div id="appleintelligence">
@@ -119,6 +119,156 @@
                 <p id="ip16probichig"><strong>iPhone 16 Pro</strong></p>
                 <p id="ip16une">From $999 or $41.62/mo. for 24mo.*</p>
               </div>
+            </div>
+          </div>
+          <div class="iwatchseries10">
+            <div class="doodbichig1">
+              <div class="uneteibichig">
+                <p id="ip16probichig"><strong>Apple Watch Series 10</strong></p>
+                <p id="ip16une">From $399 or $33.25/mo. for 12mo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="ipadmini">
+            <div class="doodbichig">
+              <div id="appleintelligence">
+                APPLE INTELLIGENCE <span class="gurvaljin">∆</span>
+              </div>
+              <div class="uneteibichig">
+                <p id="ip16probichig"><strong>iPad mini</strong></p>
+                <p id="ip16une">From $499 or $41.58/mo. for 12mo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="macbookpro">
+            <div class="doodbichig">
+              <div id="appleintelligence">
+                APPLE INTELLIGENCE <span class="gurvaljin">∆</span>
+              </div>
+              <div class="uneteibichig">
+                <p id="ip16probichig"><strong>MacBook Pro</strong></p>
+                <p id="ip16une">From $1599 or $133.25/mo. for 12mo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="ipadpro">
+            <div class="doodbichig">
+              <div id="appleintelligence">
+                APPLE INTELLIGENCE <span class="gurvaljin">∆</span>
+              </div>
+              <div class="uneteibichig">
+                <p id="ipadprobichig"><strong>iPad Pro</strong></p>
+                <p id="ipadproune">From $999 or $83.25/mo. for 12mo.</p>
+              </div>
+            </div>
+          </div>
+          <div class="airpods4">
+            <div class="doodbichig">
+              <div id="appleintelligence">Iconic. Now supersonic</div>
+              <div class="uneteibichig">
+                <p id="ip16probichig"><strong>AirPods 4</strong></p>
+                <p id="airpods4une">
+                  Starting at $129 with Active Noise Cancellation $179
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="rainbowtextpersonal">
+          <span class="solongonlatest">Personalization.</span>
+          <p class="greytext">Let them unwrap wonders</p>
+        </div>
+        <div class="scrollsecond">
+          <div class="customairpod">
+            <div class="custombichig">
+              <div>Make their gift</div>
+              <div>one of a kind</div>
+            </div>
+          </div>
+          <div class="airpodsmax">
+            <img src="./airpodsmax.jpg" alt="" class="airpodsmaxzurag" />
+            <img
+              src="./List - AirPods Max - PurpleAvailable colors.png"
+              alt=""
+            />
+            <div class="airpodsmaxbichig">
+              <div class="ulaanharbichig">
+                <div class="ulaanbichig">Free engraving</div>
+                <div class="harbichig">Airpods Max - Purple</div>
+              </div>
+              <div class="price">$249</div>
+            </div>
+          </div>
+          <div class="airpodspro2">
+            <img src="./airpodspro2.jpg" alt="" class="airpodsmaxzurag" />
+            <div class="airpodspro2bichig">
+              <div class="ulaanharbichig">
+                <div class="ulaanbichig">Free engraving</div>
+                <div class="harbichig">AirPods Pro 2</div>
+              </div>
+              <div class="price">$249</div>
+            </div>
+          </div>
+          <div class="airpods4">
+            <img
+              src="./airpods4jijigscroll.jpg"
+              alt=""
+              class="airpodsmaxzurag"
+            />
+            <div class="airpodspro4bichig">
+              <div class="ulaanharbichigairpods4">
+                <div class="ulaanbichig4">Free engraving</div>
+                <div class="harbichig4">
+                  AirPods 4 with Active Noise Cancellation
+                </div>
+              </div>
+              <div class="price4">$179</div>
+            </div>
+          </div>
+          <div class="applepencilpro">
+            <img src="./applepencilpro.jpg" alt="" class="airpodsmaxzurag" />
+            <div class="applepencilbichig">
+              <div class="ulaanharbichigpencil">
+                <div class="ulaanbichigpencil">Free engraving</div>
+                <div class="harbichigpencil">AirPods Pro 2</div>
+              </div>
+              <div class="price">$249</div>
+            </div>
+          </div>
+          <div class="airpodspro2">
+            <img src="./airpodspro2.jpg" alt="" class="airpodsmaxzurag" />
+            <div class="airpodspro2bichig">
+              <div class="ulaanharbichig">
+                <div class="ulaanbichig">Free engraving</div>
+                <div class="harbichig">AirPods Pro 2</div>
+              </div>
+              <div class="price">$249</div>
+            </div>
+          </div>
+          <div class="airpods4">
+            <img
+              src="./airpods4jijigscroll.jpg"
+              alt=""
+              class="airpodsmaxzurag"
+            />
+            <div class="airpodspro4bichig">
+              <div class="ulaanharbichigairpods4">
+                <div class="ulaanbichig4">Free engraving</div>
+                <div class="harbichig4">
+                  AirPods 4 with Active Noise Cancellation
+                </div>
+              </div>
+              <div class="price4">$179</div>
+            </div>
+          </div>
+          <div class="applepencilpro">
+            <img src="./applepencilpro.jpg" alt="" class="airpodsmaxzurag" />
+            <div class="applepencilbichig">
+              <div class="ulaanharbichigpencil">
+                <div class="ulaanbichigpencil">Free engraving</div>
+                <div class="harbichigpencil">AirPods Pro 2</div>
+              </div>
+              <div class="price">$249</div>
             </div>
           </div>
         </div>
