duuschihgeel uzeed bna

--- a/storeapple.html
+++ b/storeapple.html
@@ -272,6 +272,36 @@
             </div>
           </div>
         </div>
+
+        <div class="rainbowtextpersonal">
+          <span class="solongonlatest">Holiday Picks.</span>
+          <p class="greytext">Add more magic to the moment.</p>
+        </div>
+        <div class="scrollthird">
+          <div class="surprise">
+            <div class="surprisebichig">
+              <div>Surprise your favorites</div>
+              <div>with these favorites</div>
+            </div>
+          </div>
+          <div class="sharcase">
+            <div class="sharcaseniilsen">
+              <div class="sharcasezurag"></div>
+              <div class="sharcaselist"></div>
+            </div>
+            <div class="sharcasebichig">
+              <div class="new">New</div>
+              <div class="blacktext">
+                iPhone 16 Silicone Case with MagSafe - Star Fruit
+              </div>
+            </div>
+            <div class="une"></div>
+          </div>
+          <div class="homepod"></div>
+          <div class="smartfolio"></div>
+          <div class="beatssolo4"></div>
+          <div class="beatssolo4"></div>
+        </div>
       </div>
     </div>
   </body>
