--- a/apple.html
+++ b/apple.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./apple.css" />
   </head>
   <body>
-    <div id="layout">
-      <header class="header">
+    <header class="header">
+      <div class="menu">
         <a href="./apple.html" class="jijiglogo">
           <img src="./Item → Link - Apple.png" alt="" />
         </a>
@@ -30,7 +30,9 @@
           </div>
           <div class="jijiglogo"><img src="./tsunhnii logo.png" alt="" /></div>
         </nav>
-      </header>
+      </div>
+    </header>
+    <div id="layout">
       <div class="page1">
         <div class="donate">
           We're donating $5 to the Global Fund for every purchase made with
@@ -40,7 +42,7 @@
           <div class="bichig">
             <div class="ip16">Iphone 16 Pro</div>
             <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
-            <div>
+            <div class="sda">
               <button class="learnmore">Learn more</button>
               <button class="buy">Buy</button>
             </div>
@@ -50,27 +52,33 @@
           <div class="bichig">
             <div class="ip16">Iphone 16</div>
             <div class="hello-apple-bichig">Hello, Apple Intelligence</div>
-            <div>
+            <div class="sda">
               <button class="learnmore">Learn more</button>
               <button class="buy">Buy</button>
             </div>
           </div>
         </div>
         <div class="gift">
-          <div class="giftmagic">Gift magic</div>
-          <div class="jijig-giftbichig">Make their holiday wish come true</div>
-          <button class="shopgifts">Shop gifts</button>
+          <div class="niilsengift">
+            <div class="giftmagic">Gift magic</div>
+            <div class="jijig-giftbichig">
+              Make their holiday wish come true
+            </div>
+            <button class="shopgifts">Shop gifts</button>
+          </div>
         </div>
         <div class="page2">
           <div class="ipadair">
             <div class="pizda">
-              <div class="ipadzurag">
-                <img src="./ipadairehnii.png" alt="" />
+              <div class="ipadairniilsen">
+                <div class="ipadzurag">
+                  <img src="./ipadairehnii.png" alt="" />
+                </div>
+                <div class="ipadairbichig">
+                  Two sizes. Faster chip. Does it all.
+                </div>
               </div>
-              <div class="ipadairbichig">
-                Two sizes. Faster chip. Does it all.
-              </div>
-              <div>
+              <div class="sda">
                 <button class="learnmore">Learn more</button>
                 <button class="buy">Buy</button>
               </div>
@@ -82,49 +90,69 @@
             </div>
           </div>
           <div class="airpod">
-            <div class="airpodtext">Airpods Pro 2</div>
-            <div class="airpodbichig">Now with a Hearing Aid feature.2</div>
-            <div class="sda">
-              <button class="learnmore">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="airpodniilsen">
+              <div class="airpodbugd">
+                <div class="airpodtext">Airpods Pro 2</div>
+                <div class="airpodbichig">Now with a Hearing Aid feature.2</div>
+              </div>
+              <div class="sda">
+                <button class="learnmore">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
           <div class="iwatch">
-            <div class="iwatchzurag">
-              <img src="./iwatchehlel.png" alt="" />
-            </div>
-            <div class="iwatchbichig">Thinstant classic.</div>
-            <div class="sda">
-              <button class="learnmore">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="iwatchniilsen">
+              <div class="iwatchbugd">
+                <div class="iwatchzurag">
+                  <img src="./iwatchehlel.png" alt="" />
+                </div>
+                <div class="series10">SERIES 10</div>
+                <div class="iwatchbichig">Thinstant classic.</div>
+              </div>
+              <div class="sda">
+                <button class="learnmore">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
           <div class="macbook">
-            <div class="macbooktext">MacBook Air</div>
-            <div class="macbookbichig">Lean. Mean. M3 machine</div>
-            <div class="sda">
-              <button class="learnmore">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="macbookniilsen">
+              <div class="macbookbugd">
+                <div class="macbooktext">MacBook Air</div>
+                <div class="macbookbichig">Lean. Mean. M3 machine</div>
+              </div>
+              <div class="sda">
+                <button class="learnmore">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
           <div class="tradein">
-            <div class="tradeinzurag"><img src="./tradein.png" alt="" /></div>
-            <div class="tradeinbichig">
-              Get $180-$650 in credit when you trade in iPhone 12 or higher.3
-            </div>
-            <div class="sda">
-              <button class="learnmore">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="tradeinbugd">
+              <div class="tradeinniilsen">
+                <div class="tradeinzurag">
+                  <img src="./tradein.png" alt="" />
+                </div>
+                <div class="tradeintext">Get $180-$650 in credit when you</div>
+                <div class="tradeintext">trade in iPhone 12 or higher.3</div>
+              </div>
+
+              <button class="getyourestimate">Get your estimate</button>
             </div>
           </div>
           <div class="card">
-            <div class="cardzurag"><img src="./card.png" alt="" /></div>
-            <div class="cardbichig">
-              Get up to 3% Daily Cash back with every purchase.
-            </div>
-            <div class="sda">
-              <button class="learnmore">Learn more</button>
-              <button class="buy">Buy</button>
+            <div class="cardzuragbugd">
+              <div class="cardzuragniilsen">
+                <div class="cardzurag"><img src="./card.png" alt="" /></div>
+                <div class="cardbichig">
+                  Get up to 3% Daily Cash back with every purchase.
+                </div>
+              </div>
+              <div class="sda">
+                <button class="learnmore">Learn more</button>
+                <button class="buy">Buy</button>
+              </div>
             </div>
           </div>
         </div>
@@ -215,6 +243,25 @@
           <a href="#zurag-10" class="dot"></a>
         </div>
       </div>
+      <footer>
+        <div class="animation">
+          <div class="group">
+            <div class="animationzurag1"></div>
+            <div class="animationzurag2"></div>
+            <div class="animationzurag3"></div>
+            <div class="animationzurag4"></div>
+            <div class="animationzurag5"></div>
+            <div class="animationzurag6"></div>
+            <div class="animationzurag7">
+              <div class="dotorzurag7"><img src="./rnb.jpg" alt="" /></div>
+              <div class="dotorbichig7">R&B Now</div>
+            </div>
+            <div class="animationzurag8"></div>
+            <div class="animationzurag9"></div>
+            <div class="animationzurag10"></div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
